
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef char UCHAR ;


 int strcmp (char*,char*) ;

UCHAR get_push_register_instruction(UCHAR *reg)
{
         if (!strcmp(reg, "eax")) return 'P';
    else if (!strcmp(reg, "ecx")) return 'Q';
    else if (!strcmp(reg, "edx")) return 'R';
    else if (!strcmp(reg, "ebx")) return 'S';
    else if (!strcmp(reg, "esp")) return 'T';
    else if (!strcmp(reg, "ebp")) return 'U';
    else if (!strcmp(reg, "esi")) return 'V';
    else if (!strcmp(reg, "edi")) return 'W';
    else return 0;
}
